# lifapcd-image-viewer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
P2210198_P2211174_P2216446/: CMakeLists.txt
P2210198_P2211174_P2216446/data/: image1.ppm  image2.ppm  image22.ppm  image3.ppm
P2210198_P2211174_P2216446/doc/: Doxyfile
P2210198_P2211174_P2216446/src/: Image.cpp  Image.h  ImageViewer.cpp  ImageViewer.h  Pixel.h  mainAffichage.cpp  mainExemple.cpp  mainTest.cpp
TD_moduleImage/: IOimage.cpp  createArchive.sh  evalModuleImage.py
src/: Image.cpp  Image.h  Pixel.cpp  Pixel.h  mainAffichage.cpp  mainExemple.cpp  mainTest.cpp
